Fixes broken layout in results page

--- a/app/assets/stylesheets/pages/_results.sass
+++ b/app/assets/stylesheets/pages/_results.sass
@@ -2,6 +2,8 @@
   text-align: left
   .pile-group
     padding-bottom: 4em
+    &:nth-child(3)
+      clear: left
   .result-action-list, .result-pile-title
     max-width: 370px
     margin-left: auto
